--- a/trote/css/styles.css
+++ b/trote/css/styles.css
@@ -1,24 +1,29 @@
-body{
-    font-family: Arial, sans-serif;
+*{    
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+}
+body{
+    font-family: Arial, sans-serif;
+    background-color: #ebebeb;
     text-align: center;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
 }
 header{
-    background-color: #28a745;
+    background-color: #0060f5;
     color: white;
-    padding: 15px 0;
+    padding: 40px 0;
     font-size: 24px;
 }
 nav{
-    background-color: #007bff;
-    padding: 10px;
+    background-color: #ffb401;
+    padding: 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 100px;
+    gap: 10px;
 }
 
 #links-menu{
@@ -31,7 +36,39 @@ nav a{
     text-decoration: none;
     padding: 10px 15px;
     font-size: 18px;
-    background-color: #0056b3;
+    background-color: #0060f5;
     border-radius: 13px;
     cursor: pointer;
+
+}
+#img-menu{
+    height: 100%;
+    display: flex;
+    align-items: center; 
+}
+#img-menu img{
+    position: relative;
+    width: 120px;
+    height: auto;
+    border-radius: 13px;
+    margin-right: 30px;
+}
+.container{ 
+    width: 80%;
+    background-color: white;
+    border-radius: 15px;
+    margin: 20px auto;
+    padding: 20px;
+    text-align: justify;
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+.container h2{
+    text-align: center;
+}
+.container ol {
+    display: flex;
+    gap: 30px;
+    background-color: red;
 }
