--- a/trote/css/styles.css
+++ b/trote/css/styles.css
@@ -1,5 +1,5 @@
 *{    
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -58,17 +58,31 @@ nav a{
     background-color: white;
     border-radius: 15px;
     margin: 20px auto;
-    padding: 20px;
+    padding: 100px;
     text-align: justify;
     display: flex;
     gap: 20px;
     flex-direction: column;
 }
-.container h2{
+.container h2, .container h3{
     text-align: center;
 }
+
 .container ol {
     display: flex;
     gap: 30px;
-    background-color: red;
+}
+#tabelaEquipes{
+    align-self: center;
+}
+#tabelaEquipes h4{
+    text-align: center;
+}
+#tabelaEquipes tr th, #tabelaEquipes tr td{
+    text-align: center;
+    padding: 20px;
+}
+#tabelaEquipes th{
+    background-color: rgb(0, 0, 131);
+    color: #fff;
 }
